# dumpster

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  utils.py
decrypt/: Makefile  README.md  ent.xml  unfairplay.c
ios_tools/: __init__.py
tweak/: Tweak.m  installd.js
wrapper/: Makefile  dumpster.m
